--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: rt_dev
+  database: <%= ENV["pg_database"] %>
   pool: 5
-  username: rt_pg_dev_user
-  password: pgdevpwd
+  username: <%= ENV["pg_username"] %>
+  password: <%= ENV["pg_password"] %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -46,15 +46,15 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: rt_test
+  database: <%= ENV["pg_database"] %>
   pool: 5
-  username: rt_pg_test_user
-  password: pgtestpwd
+  username: <%= ENV["pg_username"] %>
+  password: <%= ENV["pg_password"] %>
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: richmond_trees-admin_production
+  database: <%= ENV["pg_database"] %>
   pool: 5
-  username: richmond_trees-admin
-  password:
+  username: <%= ENV["pg_username"] %>
+  password: <%= ENV["pg_password"] %>
