--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,8 +5,11 @@
 # below each fixture, per the syntax in the comments below
 #
 testuser1:
+  first_name: "test"
+  last_name: "user1"
   username: "testuser1"
   email: "testuser1@test.com"
+  phone: "123-123-1234"
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::Sha512.encrypt("benrocks" + salt) %>
   persistence_token: <%= Authlogic::Random.hex_token %>
