--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: MyString
-  last_name: MyString
+  first_name: Bob
+  last_name: Jones
   email: MyString
   phone: MyString
 
 two:
-  first_name: MyString
-  last_name: MyString
+  first_name: Jane
+  last_name: 
   email: MyString
   phone: MyString
