--- a/test/fixtures/plantings.yml
+++ b/test/fixtures/plantings.yml
@@ -4,7 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  adoption_request_id: 1
+  tree_id: 1
+  plant_space_width: "2x4"
 # column: value
 #
 two: {}
