--- a/test/fixtures/trees.yml
+++ b/test/fixtures/trees.yml
@@ -1,9 +1,10 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  common_name: MyString
-  scientific_name: MyString
-  family_name: MyString
+  id: 1
+  common_name: "Bay Laurel"
+  scientific_name: "Umbellularia californica"
+  family_name: "Lauraceae"
 
 two:
   common_name: MyString
