--- a/test/fixtures/maintenance_records.yml
+++ b/test/fixtures/maintenance_records.yml
@@ -1,11 +1,10 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  status_code: MyString
-  reason_code: MyString
-  diameter_breast_height: MyString
+  planting_id: 1
+  maintenance_date: 2015-01-01
+  status_code: A
+  reason_codes: 
+  diameter_breast_height: 
 
-two:
-  status_code: MyString
-  reason_code: MyString
-  diameter_breast_height: MyString
+two: {}
