Added some tests to verify db referenctial checks on users and trees.

--- a/test/fixtures/trees.yml
+++ b/test/fixtures/trees.yml
@@ -6,7 +6,8 @@ one:
   scientific_name: "Umbellularia californica"
   family_name: "Lauraceae"
 
-two:
+no_references:
+  id: 99
   common_name: MyString
   scientific_name: MyString
   family_name: MyString
