--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -17,3 +17,15 @@ testuser1:
   single_access_token: <%= Authlogic::Random.friendly_token %>
   perishable_token: <%= Authlogic::Random.friendly_token %>
 
+no_references:
+  id: 99
+  first_name: "no"
+  last_name: "references"
+  username: "norefs"
+  email: "no@refs.com"
+  phone: "123-123-1234"
+  password_salt: <%= salt = Authlogic::Random.hex_token %>
+  crypted_password: <%= Authlogic::CryptoProviders::Sha512.encrypt("benrocks" + salt) %>
+  persistence_token: <%= Authlogic::Random.hex_token %>
+  single_access_token: <%= Authlogic::Random.friendly_token %>
+  perishable_token: <%= Authlogic::Random.friendly_token %>
