--- a/test/fixtures/plantings.yml
+++ b/test/fixtures/plantings.yml
@@ -9,7 +9,11 @@ one:
   adoption_request_id: 1
   tree_id: 1
   plant_space_width: "2x4"
-# column: value
-#
-two: {}
-#  column: value
+  user_id: 1
+
+two:
+  id: 2
+  adoption_request_id: 2
+  tree_id: 1
+  plant_space_width: "4'"
+  user_id: 1
