--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ env:
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
+addons:
+  postgresql: "9.4"
