--- a/test/fixtures/zones.yml
+++ b/test/fixtures/zones.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  description: MyString
+  id: 1
+  name: 1
+  description: 'zone 1'
 
 two:
-  name: MyString
-  description: MyString
+  id: 2
+  name: 2
+  description: 'zone 2'
