--- a/test/fixtures/maintenance_records.yml
+++ b/test/fixtures/maintenance_records.yml
@@ -4,14 +4,25 @@ one:
   planting_id: 1
   maintenance_date: 2015-01-01
   status_code: A
-  reason_codes: 
+  reason_codes:
   diameter_breast_height: "2"
   user_id: 1
+  ignore: false
 
 two:
   planting_id: 1
   maintenance_date: 2015-12-01
   status_code: U
-  reason_codes: 
+  reason_codes:
   diameter_breast_height: "4"
   user_id: 1
+  ignore: false
+
+ignored:
+  planting_id: 1
+  maintenance_date: 2015-12-01
+  status_code: U
+  reason_codes:
+  diameter_breast_height: "4"
+  user_id: 1
+  ignore: true
