--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
     "name": "Richmond Trees Database",
     "description": "Adoption Request and Tree Tracking web app for Richmond Trees",
-    "stack": "heroku-20",
+    "stack": "heroku-20"
 }
-
