add secret_key_base and set in production config

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ build/
 # no logs
 /log/*
 
-# Ignore application configuration
+# Ignore application secrets (figaro)
 /config/application.yml
 
 # Ignore vim backup/temp files
